--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "cz-customizable": "^7.0.0",
+    "vant": "^4.0.9",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-marquee": "^3.1.2",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -18,6 +21,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "less": "^4.0.0",
-    "less-loader": "^8.0.0"
+    "less-loader": "^8.0.0",
+    "unplugin-vue-components": "^0.22.12"
   }
 }
