--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "cz-customizable": "^7.0.0",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.2",
     "vant": "^4.0.9",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
